finished publications page

--- a/404.md
+++ b/404.md
@@ -1,7 +1,11 @@
 ---
 layout: post
-title: 404
+title: 404 page not found
 show_tile: false
 ---
 
-Page not found! :(
+Oops...did you just find a bug?
+<ul class="actions vertical">
+		<li><a href="https://github.com/JChiouLab/JChiouLab.github.io/issues" class="button special icon fa-github">Let us know</a></li>
+</ul>
+<img src="assets/images/404.jpg">
